[package]
name = "rust_pr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
once_cell = "1.20.2"
crossbeam-channel = "0.5"
tungstenite = "0.24.0"